Changes to get the blasted build running on both Java5 and Java6